--- a/main.scss
+++ b/main.scss
@@ -19,6 +19,173 @@ body {
 .main {
   display: flex;
   gap: 50px;
+  width: 100vw;
+  overflow: hidden;
+}
+.controll-component {
+  width: max-content;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 90%;
+  .controller {
+    display: flex;
+    gap: 50px;
+    justify-content: space-evenly;
+    align-items: center;
+    .player {
+      width: max-content;
+      box-shadow: inset 0.1px 0.1px 40px #0a0a0a17;
+      border-radius: 30px;
+      padding: 20px;
+
+      .player-box {
+        .player-img {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          img {
+            width: 300px;
+            height: 250px;
+            object-fit: cover;
+            border-radius: 30px;
+          }
+        }
+        .player-text {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          gap: 10px;
+          padding-top: 20px;
+          .music-name {
+            color: $blue-color;
+            font-size: 1.3rem;
+            font-weight: 500;
+          }
+          .artist-name {
+            color: $primary-color;
+            font-size: 13px;
+          }
+        }
+        .controll-box{
+          .track{
+            width: 100%;
+            background-color: $main-color;
+            height: 4px;
+            border-radius: 50px;
+            margin-top: 30px;
+          }
+          .timer{
+            display: flex;
+            justify-content: space-between;
+            font-size: 13px;
+            color: $primary-color;
+            padding: 10px 0;
+          }
+        }
+        .icons-controlls{
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          gap: 30px;
+          button{
+            padding: 20px;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+    .play-list {
+      box-shadow: inset 0.1px 0.1px 40px #0a0a0a17;
+      width:50%;
+      border-radius: 80px;
+      padding: 30px 70px;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-height: 450px;
+      .head {
+        font-size: 1.7rem;
+        color: $main-color;
+        font-weight: 600;
+        margin-top: 10px;
+        margin-bottom: 30px;
+        padding: 10px 0;
+        border-bottom: 1px solid $light-color;
+      }
+      .layer {
+        overflow: auto;
+        max-height: 280px;
+        .play-list-lst {
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+          .card {
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+            .card-img {
+              display: flex;
+              gap: 30px;
+              .card-text {
+                display: flex;
+                gap: 10px;
+                justify-content: center;
+                flex-direction: column;
+                .music-name {
+                  font-weight: 500;
+                  font-size: 1.3rem;
+                  color: $blue-color;
+                }
+                .artist-name {
+                  color: $primary-color;
+                }
+              }
+              cursor: pointer;
+              .img-box {
+                overflow: hidden;
+                border-radius: 20px;
+
+                img {
+                  width: 80px;
+                  &:hover {
+                    transform: scale(1.3) rotate(-40deg);
+                    transition: 0.3s ease;
+                  }
+                }
+              }
+            }
+            .controll {
+              display: flex;
+              gap: 100px;
+              align-items: center;
+              gap: 40px;
+              overflow: hidden;
+              button:hover {
+                transform: scale(1.2);
+                transition: 0.3s ease;
+              }
+              .play-btn {
+                color: $main-color;
+                cursor: pointer;
+                span {
+                  font-size: 2.5rem;
+                }
+              }
+              .like-btn {
+                color: $light-color;
+                cursor: pointer;
+                span {
+                  font-size: 2.5rem;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 .aside {
@@ -71,12 +238,14 @@ body {
   height: 100%;
   padding: 30px;
   margin: 30px;
+  border-radius: 80px;
   overflow: hidden;
   .head {
     font-size: 1.3rem;
     margin: 30px 0;
-    color: $blue-color;
+    color: $main-color;
     font-weight: bold;
+    padding: 0 30px;
     display: flex;
     justify-content: space-between;
     .arrows {
@@ -85,28 +254,28 @@ body {
       .arrow-left {
         width: 30px;
         height: 30px;
-        background-color: $primary-color;
+        background-color: $main-color;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         color: $white-color;
         cursor: pointer;
-        &:hover{
+        &:hover {
           background-color: $main-color;
         }
       }
       .arrow-right {
         width: 30px;
         height: 30px;
-        background-color: $primary-color;
+        background-color: $main-color;
         border-radius: 50%;
         display: flex;
         justify-content: center;
         align-items: center;
         color: $white-color;
         cursor: pointer;
-        &:hover{
+        &:hover {
           background-color: $main-color;
         }
       }
@@ -116,7 +285,7 @@ body {
     overflow: auto;
     /* width */
     &::-webkit-scrollbar {
-      width: 20px;
+      height: 0 !important;
     }
     .cards {
       display: flex;
@@ -128,6 +297,9 @@ body {
         flex-direction: column;
         width: 200px;
         padding: 20px;
+        color: $blue-color;
+        font-weight: 500;
+        font-size: 1.2rem;
         .card-img {
           justify-content: center;
           align-items: center;
@@ -142,7 +314,7 @@ body {
             width: 150px;
             cursor: pointer;
             border-radius: 50%;
-            border: 1px solid $primary-color;
+            border: 3px solid $primary-color;
           }
           &:hover .circle {
             transform: translate(-10%, -40%) scale(1.2);
