--- a/main.scss
+++ b/main.scss
@@ -16,6 +16,35 @@ body {
   width: 100vw;
 }
 
+@mixin mediaSize($size) {
+  @if $size == sm {
+    @media screen and (max-width: 567px) {
+      @content;
+    }
+  } @else if $size == md {
+    @media screen and (max-width: 678px) {
+      @content;
+    }
+  } @else if $size == lg {
+    @media screen and (max-width: 1176px) {
+      @content;
+    }
+  } @else {
+    @media screen and (max-width: 1400px) {
+      @content;
+    }
+  }
+}
+
+* {
+  @include mediaSize(sm) {
+    &::-webkit-scrollbar {
+      width: 0 !important;
+      height: 0 !important;
+    }
+  }
+}
+
 .main {
   display: flex;
   gap: 50px;
@@ -28,27 +57,37 @@ body {
   flex-direction: column;
   height: 100%;
   width: 90%;
+  @include mediaSize(sm) {
+    width: 100%;
+    padding: 0 10px;
+  }
   .controller {
     display: flex;
     gap: 50px;
     justify-content: space-evenly;
     align-items: center;
+    @include mediaSize(sm) {
+      flex-direction: column-reverse;
+      gap: 25px;
+    }
     .player {
       width: max-content;
       box-shadow: inset 0.1px 0.1px 40px #0a0a0a17;
-      border-radius: 30px;
-      padding: 20px;
-
+      border-radius: 10px;
+      @include mediaSize(sm) {
+        width: 100%;
+        height: max-content;
+      }
       .player-box {
         .player-img {
           display: flex;
           justify-content: center;
           align-items: center;
           img {
-            width: 300px;
+            width: 100%;
             height: 250px;
             object-fit: cover;
-            border-radius: 30px;
+            border-radius: 5px;
           }
         }
         .player-text {
@@ -56,8 +95,8 @@ body {
           flex-direction: column;
           justify-content: center;
           align-items: center;
+          padding: 20px;
           gap: 10px;
-          padding-top: 20px;
           .music-name {
             color: $blue-color;
             font-size: 1.3rem;
@@ -68,15 +107,16 @@ body {
             font-size: 13px;
           }
         }
-        .controll-box{
-          .track{
+        .controll-box {
+          margin: 20px;
+          .track {
             width: 100%;
             background-color: $main-color;
             height: 4px;
             border-radius: 50px;
             margin-top: 30px;
           }
-          .timer{
+          .timer {
             display: flex;
             justify-content: space-between;
             font-size: 13px;
@@ -84,27 +124,35 @@ body {
             padding: 10px 0;
           }
         }
-        .icons-controlls{
+        .icons-controlls {
           display: flex;
           justify-content: center;
           align-items: center;
           gap: 30px;
-          button{
+          button {
             padding: 20px;
             cursor: pointer;
+            @include mediaSize(sm) {
+              padding: 10px;
+            }
           }
         }
       }
     }
     .play-list {
       box-shadow: inset 0.1px 0.1px 40px #0a0a0a17;
-      width:50%;
-      border-radius: 80px;
+      width: 50%;
+      border-radius: 10px;
       padding: 30px 70px;
       display: flex;
       flex-direction: column;
       gap: 30px;
       max-height: 450px;
+      @include mediaSize(sm) {
+        width: 100%;
+        margin-bottom: 20px;
+        padding: 30px;
+      }
       .head {
         font-size: 1.7rem;
         color: $main-color;
@@ -125,6 +173,9 @@ body {
             display: flex;
             justify-content: space-between;
             padding: 20px;
+            @include mediaSize(sm) {
+              padding: 0;
+            }
             .card-img {
               display: flex;
               gap: 30px;
@@ -137,6 +188,9 @@ body {
                   font-weight: 500;
                   font-size: 1.3rem;
                   color: $blue-color;
+                  @include mediaSize(sm) {
+                    font-size: 1.1rem;
+                  }
                 }
                 .artist-name {
                   color: $primary-color;
@@ -146,9 +200,14 @@ body {
               .img-box {
                 overflow: hidden;
                 border-radius: 20px;
-
+                @include mediaSize(sm) {
+                  border-radius: 5px;
+                }
                 img {
                   width: 80px;
+                  @include mediaSize(sm) {
+                    width: 60px;
+                  }
                   &:hover {
                     transform: scale(1.3) rotate(-40deg);
                     transition: 0.3s ease;
@@ -162,6 +221,9 @@ body {
               align-items: center;
               gap: 40px;
               overflow: hidden;
+              @include mediaSize(sm) {
+                gap: 20px;
+              }
               button:hover {
                 transform: scale(1.2);
                 transition: 0.3s ease;
@@ -171,6 +233,9 @@ body {
                 cursor: pointer;
                 span {
                   font-size: 2.5rem;
+                  @include mediaSize(sm) {
+                    font-size: 2rem;
+                  }
                 }
               }
               .like-btn {
@@ -178,6 +243,9 @@ body {
                 cursor: pointer;
                 span {
                   font-size: 2.5rem;
+                  @include mediaSize(sm) {
+                    font-size: 2rem;
+                  }
                 }
               }
             }
@@ -230,6 +298,9 @@ body {
       }
     }
   }
+  @include mediaSize(sm) {
+    display: none;
+  }
 }
 
 .category {
@@ -238,8 +309,12 @@ body {
   height: 100%;
   padding: 30px;
   margin: 30px;
-  border-radius: 80px;
+  border-radius: 10px;
   overflow: hidden;
+  @include mediaSize(sm) {
+    width: 100%;
+    margin: 30px 0;
+  }
   .head {
     font-size: 1.3rem;
     margin: 30px 0;
@@ -248,6 +323,9 @@ body {
     padding: 0 30px;
     display: flex;
     justify-content: space-between;
+    @include mediaSize(sm) {
+      padding: 0 10px;
+    }
     .arrows {
       display: flex;
       gap: 20px;
@@ -300,6 +378,11 @@ body {
         color: $blue-color;
         font-weight: 500;
         font-size: 1.2rem;
+        @include mediaSize(sm) {
+          width: 100px;
+          padding: 10px;
+          font-size: 1rem;
+        }
         .card-img {
           justify-content: center;
           align-items: center;
@@ -315,10 +398,19 @@ body {
             cursor: pointer;
             border-radius: 50%;
             border: 3px solid $primary-color;
+            @include mediaSize(sm) {
+              width: 80px;
+              height: 80px;
+              border-radius: 10px;
+              border: 1px solid $primary-color;
+            }
           }
           &:hover .circle {
             transform: translate(-10%, -40%) scale(1.2);
             transition: 0.3s ease;
+            @include mediaSize(sm) {
+              transform: translate(-20%, -80%) scale(1.2);
+            }
           }
           .circle {
             position: absolute;
@@ -335,6 +427,11 @@ body {
             font-size: 1.3rem;
             color: $main-color;
             cursor: pointer;
+            @include mediaSize(sm) {
+              width: 30px;
+              height: 30px;
+              transform: translate(-20%, -80%);
+            }
           }
         }
       }
