--- a/main.scss
+++ b/main.scss
@@ -62,13 +62,16 @@ body {
     padding: 0 10px;
   }
   .controller {
+    width: 93%;
     display: flex;
     gap: 50px;
-    justify-content: space-evenly;
     align-items: center;
+    padding: 0 30px;
+    justify-content: space-between;
     @include mediaSize(sm) {
       flex-direction: column-reverse;
       gap: 25px;
+      padding: 0;
     }
     .player {
       width: max-content;
@@ -77,6 +80,9 @@ body {
       @include mediaSize(sm) {
         width: 100%;
         height: max-content;
+      }
+      .layer{
+        padding: 20px;
       }
       .player-box {
         .player-img {
@@ -95,7 +101,6 @@ body {
           flex-direction: column;
           justify-content: center;
           align-items: center;
-          padding: 20px;
           gap: 10px;
           .music-name {
             color: $blue-color;
@@ -108,7 +113,6 @@ body {
           }
         }
         .controll-box {
-          margin: 20px;
           .track {
             width: 100%;
             background-color: $main-color;
